<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="A">A</string>
    <string name="D">D</string>
    <string name="FAQ">帮助（FAQ）</string>
    <string name="K">K</string>
    <string name="a_avg">场均助攻</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about_us">关于小黑盒</string>
    <string name="abstract_title">摘要</string>
    <string name="accept">同意</string>
    <string name="accept_success">已同意</string>
    <string name="accessories_value">饰品价值</string>
    <string name="account_balance">余额</string>
    <string name="account_empty">用户名不能为空</string>
    <string name="account_length_msg">用户名为11位手机号码</string>
    <string name="account_value">账号价值</string>
    <string name="achieve_level">成就等级:  </string>
    <string name="achieve_point">成就点数:  </string>
    <string name="achievement">成就</string>
    <string name="achievement_point">成就点</string>
    <string name="achievement_point_and_num">完成人数百分比 / 成就点</string>
    <string name="achievement_point_rank">成就点排名</string>
    <string name="achievement_progress">完成度:</string>
    <string name="activate_success">激活成功</string>
    <string name="activity">活动</string>
    <string name="activity_center">活动中心</string>
    <string name="actual_price">实付金额: </string>
    <string name="add">添加</string>
    <string name="add_answer">添加回答</string>
    <string name="add_as_default">添加为默认角色</string>
    <string name="add_character">添加角色</string>
    <string name="add_character_desc">认证角色可以解锁更多功能</string>
    <string name="add_comment">添加评价</string>
    <string name="add_default_character">添加默认游戏角色</string>
    <string name="add_follow">添加关注</string>
    <string name="add_game_account">添加 %1$s 游戏账号</string>
    <string name="add_member">添加成员</string>
    <string name="add_my_stream">添加我的直播源</string>
    <string name="add_pic">添加图片</string>
    <string name="add_reminder">开启赛前提醒！</string>
    <string name="add_schedule">添加赛程</string>
    <string name="add_success">添加成功</string>
    <string name="add_team">添加队伍</string>
    <string name="add_to_max_store">添加库存</string>
    <string name="add_to_max_store_tips">Max+只识别竞猜饰品的名称和前缀，不区分饰品上的宝石或贴纸。若您将带有宝石或贴纸的特殊饰品存入竞猜库存，无论是否进行竞猜，取回时都有可能与原饰品不同。请您在存入时务必注意带有宝石或贴纸的特殊饰品。</string>
    <string name="add_to_store">添加饰品</string>
    <string name="add_topic">添加话题</string>
    <string name="add_url">添加链接</string>
    <string name="add_video">添加视频</string>
    <string name="add_wager">追加</string>
    <string name="advanced_search_data_hint">请输入英雄、装备名称</string>
    <string name="advanced_search_hint">搜索昵称、ID、英雄、物品、新闻、帖子…</string>
    <string name="advanced_search_id_hint">请输入SteamID或昵称</string>
    <string name="advanced_search_match_hint">请输入比赛编号</string>
    <string name="advanced_search_news_post_hint">请输入关键词</string>
    <string name="against_tips">对抗技巧</string>
    <string name="agree_max_agreement">点注册即视为同意《小黑盒服务及隐私条款》</string>
    <string name="agreement_name">《Max＋服务及隐私条款》</string>
    <string name="aimed_point">克制指数</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="all">全部</string>
    <string name="all_article">全部文章</string>
    <string name="all_bet_list">全部竞猜</string>
    <string name="all_comment">全部评论</string>
    <string name="all_game">全部比赛</string>
    <string name="all_game_comment">全部评价</string>
    <string name="all_game_statistics">全部比赛统计</string>
    <string name="all_hero">全部英雄</string>
    <string name="all_leagues">全部联赛</string>
    <string name="all_links">全部热帖</string>
    <string name="all_matches_schedule">全部赛程</string>
    <string name="all_max_leagues">全部赛事</string>
    <string name="all_news_topic">全部专题</string>
    <string name="all_skill">全部分段</string>
    <string name="all_topic">全部话题</string>
    <string name="allow_image_to_load">省流模式</string>
    <string name="allow_image_to_load_desc">开启后默认不加载新闻列表图片和社区图片</string>
    <string name="already_accept">已同意</string>
    <string name="already_over">已结束</string>
    <string name="already_participate">已参加</string>
    <string name="already_refuse">已拒绝</string>
    <string name="already_win">已中奖</string>
    <string name="amaor">护甲</string>
    <string name="and_more_people">等%1$s人</string>
    <string name="announcement_content">公告内容</string>
    <string name="announcement_reply">公告回复</string>
    <string name="anonymous_player">匿名玩家</string>
    <string name="answer">回答</string>
    <string name="answer_hint">用心写下的回答会得到更多的欣赏</string>
    <string name="app_name">小黑盒</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance_rate">出场率</string>
    <string name="applied_list">报名列表</string>
    <string name="apply_done">申请成功</string>
    <string name="apply_for">申请加入</string>
    <string name="apply_success">申请成功</string>
    <string name="ascending_order">正序</string>
    <string name="assist">助攻</string>
    <string name="attack">攻击力</string>
    <string name="attack_damage">攻击伤害</string>
    <string name="attack_point">攻击前摇</string>
    <string name="attend_rate_colon">参战率:</string>
    <string name="attribute_agility">敏捷型</string>
    <string name="attribute_intellect">智力型</string>
    <string name="attribute_strength">力量型</string>
    <string name="audience">观察者：</string>
    <string name="audience_unit">名观众</string>
    <string name="author">作者</string>
    <string name="author_desc">作者介绍</string>
    <string name="author_list">作者列表</string>
    <string name="author_news_num"> 篇新闻</string>
    <string name="avatar">头像</string>
    <string name="avg">平均</string>
    <string name="avg_ban_order">平均禁用位</string>
    <string name="avg_gold_diff">场均经济差</string>
    <string name="avg_obs_destroyed">场均反眼</string>
    <string name="avg_obs_placed">场均插眼</string>
    <string name="avg_obs_used_time">平均守卫持续时间</string>
    <string name="avg_pick_order">平均选择位</string>
    <string name="avg_roshan">场均控盾</string>
    <string name="avg_xp_diff">场均经验差</string>
    <string name="award">赞</string>
    <string name="awarded">已赞赏</string>
    <string name="awarded_num">获赞</string>
    <string name="bbs_test_award">在任务中心也可以参加考试</string>
    <string name="bbs_test_confirm">开始答题</string>
    <string name="bbs_test_content">为了创造一片属于游戏爱好者的净土，小黑盒邀请您进行礼仪考试，通过问答的形式了解社区文化</string>
    <string name="bbs_test_title">欢迎来到小黑盒社区！</string>
    <string name="bing_role">录入角色</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>
    <string name="current">当前</string>
    <string name="digits">"0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ~`!@#$%^*()_-+=:;?/.,'{}[]"</string>
    <string name="follow_player">关注玩家</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="game_time">游戏时长</string>
    <string name="get_data_after_bind">绑定后可查看绝地求生个人数据~</string>
    <string name="go_to">跳转</string>
    <string name="help">帮助</string>
    <string name="input_game_nickname">输入游戏昵称</string>
    <string name="input_invitation_code">请输入邀请码（可不填）</string>
    <string name="input_page">请输入跳转页码</string>
    <string name="input_phonenumber">输入您的手机号</string>
    <string name="input_pwd">输入您的密码</string>
    <string name="input_pwd_again">再次输入密码</string>
    <string name="input_pwd_requirements">输入您的密码 (6~20位字母或数字)</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="invite_to_heybox">小黑盒账号</string>
    <string name="kd">K/D</string>
    <string name="kill">击杀</string>
    <string name="login">登录</string>
    <string name="match_time_x">更新时间</string>
    <string name="mode">模式</string>
    <string name="next">下一步</string>
    <string name="obtain">获取</string>
    <string name="page">页</string>
    <string name="player">玩家</string>
    <string name="ranking">排名</string>
    <string name="rating">Rating</string>
    <string name="score">评分</string>
    <string name="skip_login">跳过登录</string>
</resources>