<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="30.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_11" android:textColor="@color/white_140" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:text="@string/match_time_x" android:layout_centerVertical="true" />
    <TextView android:textSize="@dimen/text_size_11" android:textColor="@color/white_140" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="88.0dip" android:text="@string/mode" android:layout_centerVertical="true" />
    <TextView android:textSize="@dimen/text_size_11" android:textColor="@color/white_140" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="186.0dip" android:text="@string/rating" android:layout_centerVertical="true" />
    <LinearLayout android:orientation="vertical" android:layout_width="30.0dip" android:layout_height="wrap_content" android:layout_marginLeft="260.0dip" android:layout_centerVertical="true">
        <TextView android:textSize="@dimen/text_size_10" android:textColor="@color/white_140" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kill" />
        <TextView android:textSize="@dimen/text_size_10" android:textColor="@color/white_140" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kd" />
    </LinearLayout>
    <TextView android:textSize="@dimen/text_size_11" android:textColor="@color/white_140" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="33.0dip" android:text="@string/score" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <View android:background="@color/divider_color" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentTop="true" />
    <View android:id="@id/v_item_matches_divider" android:background="@color/divider_color" android:layout_width="fill_parent" android:layout_height="@dimen/divider_height" android:layout_alignParentBottom="true" />
</RelativeLayout>