<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="@dimen/custom_dialog_width" android:layout_height="220.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/white_top_5dp" android:paddingLeft="16.0dip" android:paddingTop="20.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="@dimen/custom_dialog_width" android:layout_height="wrap_content">
        <EditText android:textSize="@dimen/text_size_12" android:textColorHint="@color/text_hint_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/et_input_code" android:background="@color/window_bg_color" android:layout_width="fill_parent" android:layout_height="36.0dip" android:hint="@string/input_page" android:singleLine="true" android:maxLength="10" android:inputType="number" />
        <LinearLayout android:layout_gravity="right" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current" style="@style/TextStyle_Normal_12" />
            <TextView android:textSize="@dimen/text_size_13" android:textStyle="normal" android:textColor="@color/interactive_color" android:id="@id/tv_page_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/page" style="@style/TextStyle_Normal_12" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip">
        <TextView android:textSize="13.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_comfirm" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/go_to" android:layout_weight="1.0" />
        <TextView android:textSize="13.0dip" android:textColor="@color/text_secondary_color" android:gravity="center" android:id="@id/tv_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>