<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_agreement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:layout_alignParentBottom="true">
        <CheckBox android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/ck_agreement" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:checked="true" android:button="@drawable/checkbox_selector" />
        <TextView android:textSize="@dimen/text_size_10" android:typeface="sans" android:textColor="#ff999999" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/tv_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/agree_max_agreement" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/activePart" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/ll_agreement">
        <TextView android:textSize="@dimen/text_size_14" android:typeface="sans" android:textColor="@color/tile_bg_color" android:layout_gravity="center|right" android:id="@id/pass_login" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skip_login" />
        <LinearLayout android:orientation="vertical" android:id="@id/ll_number" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/LoginWhiteStyle">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="48.0dip">
                <EditText android:textSize="@dimen/text_size_12" android:typeface="sans" android:textColor="#ff333333" android:textColorHint="#ff999999" android:gravity="center_vertical" android:id="@id/et_reg_number" android:background="@null" android:paddingLeft="@dimen/login_et_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/login_et_margin" android:hint="@string/input_phonenumber" android:singleLine="true" android:inputType="number" />
            </RelativeLayout>
            <include layout="@layout/divider" />
            <RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="48.0dip">
                <EditText android:textSize="@dimen/text_size_12" android:typeface="sans" android:textColor="#ff333333" android:textColorHint="#ff999999" android:layout_gravity="left" android:id="@id/et_code" android:background="@null" android:paddingLeft="@dimen/login_et_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/login_et_margin" android:hint="@string/input_verification_code" android:singleLine="true" android:inputType="phone" />
                <EditText android:textSize="@dimen/text_size_12" android:typeface="sans" android:textColor="@color/text_secondary_color" android:gravity="center" android:id="@id/bt_achieve_code" android:background="@drawable/rec_bg_with_round_blue" android:focusable="false" android:clickable="false" android:layout_width="50.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:text="@string/obtain" android:singleLine="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <include layout="@layout/divider" />
            <RelativeLayout android:background="@drawable/white_alpha98_bottom_4dp" android:layout_width="fill_parent" android:layout_height="48.0dip">
                <EditText android:textSize="@dimen/text_size_12" android:typeface="sans" android:textColor="#ff333333" android:gravity="center_vertical" android:id="@id/et_refer_number" android:background="@null" android:paddingLeft="@dimen/login_et_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/input_invitation_code" android:singleLine="true" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:inputType="number" />
            </RelativeLayout>
        </LinearLayout>
        <Button android:enabled="false" android:textSize="@dimen/text_size_14" android:typeface="sans" android:textColor="@color/register_btn_text_color" android:id="@id/bt_click_code" android:background="@drawable/btn_register_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/next" />
    </LinearLayout>
</RelativeLayout>