<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/activePart" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/bt_submit" style="@style/LoginWhiteStyle">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="48.0dip">
                <EditText android:textSize="@dimen/text_size_12" android:typeface="sans" android:textColor="#ff333333" android:textColorHint="#ff999999" android:gravity="center_vertical" android:id="@id/et_pwd" android:background="@null" android:paddingLeft="@dimen/login_et_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/login_et_margin" android:hint="@string/input_pwd_requirements" android:singleLine="true" android:digits="@string/digits" android:inputType="textPassword" />
            </RelativeLayout>
            <include layout="@layout/divider" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="48.0dip">
                <EditText android:textSize="@dimen/text_size_12" android:typeface="sans" android:textColor="#ff333333" android:textColorHint="#ff999999" android:gravity="center_vertical" android:id="@id/et_pwd_again" android:background="@null" android:paddingLeft="@dimen/login_et_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/login_et_margin" android:hint="@string/input_pwd_again" android:singleLine="true" android:digits="@string/digits" android:inputType="textPassword" />
            </RelativeLayout>
        </LinearLayout>
        <Button android:textSize="@dimen/text_size_14" android:typeface="sans" android:textColor="@color/white" android:id="@id/bt_submit" android:background="@drawable/btn_tran_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/commit" android:layout_alignParentBottom="true" />
    </LinearLayout>
</RelativeLayout>