<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="@dimen/custom_dialog_width" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/iv_cancel" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_dialog_close" android:layout_alignParentRight="true" />
        <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/text_primary_color" android:gravity="center" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/bbs_test_title" />
        <ImageView android:id="@id/iv_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/bbs_test_start" android:layout_below="@id/tv_title" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <TextView android:gravity="center" android:id="@id/tv_content" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/bbs_test_content" android:lineSpacingExtra="4.0dip" style="@style/TextStyle_Normal_12" />
    <TextView android:textColor="@color/pubg_squad_color" android:gravity="center" android:id="@id/tv_award" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/bbs_test_award" android:lineSpacingExtra="3.0dip" style="@style/TextStyle_Normal_10" />
    <TextView android:textSize="@dimen/text_size_14" android:textStyle="normal" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tv_confirm" android:background="@drawable/btn_interactive_4dp" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="60.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="60.0dip" android:layout_marginBottom="20.0dip" android:text="@string/bbs_test_confirm" />
</LinearLayout>