<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="30.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_vertical" android:id="@id/iv_avatar" android:layout_width="30.0dip" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" />
    <TextView android:textSize="@dimen/text_size_11" android:textColor="@color/text_secondary_color" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/tv_nickname" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/follow_player" android:singleLine="true" android:layout_weight="2.0" />
    <TextView android:textSize="@dimen/text_size_11" android:textColor="@color/text_secondary_color" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/tv_update_desc" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/match_time_x" android:singleLine="true" android:layout_weight="2.0" />
    <TextView android:textSize="@dimen/text_size_11" android:textColor="@color/text_secondary_color" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/tv_rating" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/rating" android:singleLine="true" android:layout_weight="1.0" />
</LinearLayout>