<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="232.0dip" android:layout_marginLeft="4.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="4.0dip" app:cardCornerRadius="4.0dip" app:cardElevation="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:background="@drawable/bind_pubg_card_bg_x" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" />
        <RelativeLayout android:id="@id/vg_pubg_unbind_card_help" android:background="@drawable/btn_white_alpha20_2dp" android:layout_width="40.0dip" android:layout_height="22.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true">
            <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help" android:layout_centerInParent="true" />
        </RelativeLayout>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="44.0dip" android:src="@drawable/pubg_logo" android:layout_centerHorizontal="true" />
        <EditText android:textSize="@dimen/text_size_13" android:textColorHint="@color/text_hint_color" android:gravity="center" android:id="@id/et_pubg_unbind_card_nickname" android:background="@drawable/white_2dp" android:layout_width="247.0dip" android:layout_height="36.0dip" android:layout_marginTop="120.0dip" android:hint="@string/input_game_nickname" android:singleLine="true" android:layout_centerHorizontal="true" />
        <RelativeLayout android:id="@id/vg_pubg_unbind_card_bind" android:background="@drawable/orange_2dp" android:clickable="true" android:layout_width="247.0dip" android:layout_height="36.0dip" android:layout_marginTop="166.0dip" android:foreground="?selectableItemBackground" android:layout_centerHorizontal="true">
            <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bing_role" android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/text_size_10" android:textColor="@color/tile_bg_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="212.0dip" android:text="@string/get_data_after_bind" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</android.support.v7.widget.CardView>